--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Countdown Project - Track it to any easter eggs.">
+  <meta name="keywords" content="countdown, timer, event, evolutive project, time tracker">
+  <meta name="author" content="?">
+  <meta name="robots" content="index, follow">
   <title>Countdown</title>
   <!-- Google Fonts as an alternative to Code Pro -->
   <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400&display=swap" rel="stylesheet">
